Fix Highlight Rollup and Highlight Popup components
- Remove base-layout from both components (it incorrectly set
  background-color/color on the element via color-parameters-main,
  breaking the pseudo-element overlay animation approach)
- Fix padding CSS variable: 1em 2em was truncated to 1em because
  generate-vars treated the Sass list as (token, alpha); now emitted
  directly as --component-padding: 1em 2em
- Fix highlight-popup ::before/::after positioning: broken mixin calls
  position-base-layout(-1, 'absolute') + position-full-layout() produced
  position: "absolute" (invalid) then position: relative (override);
  replaced with single correct position-full-layout(-1, absolute)

Agent-Logs-Url: https://github.com/Guebbit/css-ui/sessions/09643166-1b8b-49de-b389-511399fb26c0

--- a/src/atoms/highlights/highlight-rollup/index.scss
+++ b/src/atoms/highlights/highlight-rollup/index.scss
@@ -8,15 +8,14 @@
 $component-color-map: (
     duration: vars.$duration,
     skew: vars.$skew,
-    skew-distance: vars.$skew-distance,
-    padding: vars.$padding
+    skew-distance: vars.$skew-distance
 );
 
 %#{vars.$css-ui-class-prefix}#{vars.$css-ui-component-name},
 .#{vars.$css-ui-class-prefix}#{vars.$css-ui-component-name} {
     @include generics.generate-vars($component-color-map, vars.$css-ui-component-prefix);
+    --#{vars.$css-ui-component-prefix}padding: #{vars.$padding};
 
-    @include generics.base-layout(vars.$css-ui-component-prefix);
     @include generics.position-base-layout();
     display: inline-block;
     overflow: hidden;
